--- a/app/src/main/res/layout/fragment_cars_home.xml
+++ b/app/src/main/res/layout/fragment_cars_home.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.CarsHomeFragment">
+    tools:context=".ui.cars.fragment.CarsHomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textSize="50sp"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
