--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:title="@string/app_name"
-        app:titleTextColor="@color/white"
-        app:titleTextAppearance="@style/ToolbarTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/app_name"
+        app:titleTextAppearance="@style/ToolbarTitle"
+        app:titleTextColor="@color/white" />
 
-    <FrameLayout
-        android:id="@+id/flFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/carsHomeFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolBarTitle">
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/carsHomeFragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/cars_nav_graph"/>
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@id/toolBarTitle"
+        app:navGraph="@navigation/cars_nav_graph" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
