--- a/app/src/main/res/layout/car_item_layout.xml
+++ b/app/src/main/res/layout/car_item_layout.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/carContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/carContainer"
     android:background="@color/light_gray"
     android:padding="@dimen/margin_12">
 
@@ -16,7 +16,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/alpine_roadster" />
+        tools:src="@drawable/tacoma" />
 
     <LinearLayout
         android:id="@+id/llCarData"
@@ -33,18 +33,18 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_6"
             android:gravity="top"
-            android:textColor="@color/dark_gray"
             android:textSize="@dimen/size_16"
-            tools:text="BMW Alpine" />
+            android:textColor="@color/black_40"
+            tools:text="Tacoma" />
 
         <TextView
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_6"
-            android:textColor="@color/dark_gray"
             android:textSize="@dimen/size_12"
-            tools:text="Price : 65k" />
+            android:textColor="@color/black_40"
+            tools:text="Price : 110k" />
 
         <RatingBar
             android:id="@+id/ratingBar"
@@ -52,62 +52,51 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:progressTint="@color/orange"
-            tools:rating="5" />
+            tools:rating="4"/>
 
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/containerCarSubDetails"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tvProsTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        android:padding="8dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/margin_12"
+        android:layout_marginTop="@dimen/margin_20"
+        android:textSize="@dimen/size_16"
+        android:textColor="@color/black_40"
+        android:text="@string/pros_prefix"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivCar">
+        app:layout_constraintTop_toBottomOf="@+id/ivCar"/>
 
-        <TextView
-            android:id="@+id/tvProsTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_12"
-            android:layout_marginTop="@dimen/margin_20"
-            android:text="@string/pros_prefix"
-            android:textColor="@color/dark_gray"
-            android:textSize="@dimen/size_16"
-            app:layout_constraintStart_toStartOf="@+id/containerCarDetails"
-            app:layout_constraintTop_toBottomOf="@+id/containerCarDetails" />
+    <TextView
+        android:id="@+id/tvProsList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_20"
+        android:textSize="@dimen/size_12"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProsTitle"/>
 
-        <TextView
-            android:id="@+id/tvProsList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_20"
-            android:textSize="@dimen/size_12"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvProsTitle" />
+    <TextView
+        android:id="@+id/tvConsTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_12"
+        android:textSize="@dimen/size_16"
+        android:textColor="@color/black_40"
+        android:text="@string/cons_prefix"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProsList"/>
 
-        <TextView
-            android:id="@+id/tvConsTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_12"
-            android:text="@string/cons_prefix"
-            android:textColor="@color/dark_gray"
-            android:textSize="@dimen/size_16"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvProsList" />
-
-        <TextView
-            android:id="@+id/tvConsList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_20"
-            android:textSize="@dimen/size_12"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvConsTitle" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvConsList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_20"
+        android:textSize="@dimen/size_12"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvConsTitle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
