--- a/app/src/main/res/layout/car_item_layout.xml
+++ b/app/src/main/res/layout/car_item_layout.xml
@@ -83,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_12"
+        android:layout_marginTop="@dimen/margin_10"
         android:textSize="@dimen/size_16"
         android:textColor="@color/black_40"
         android:text="@string/cons_prefix"
